# behavioral-veriloga-eval

./: .gitignore  ADFGI_UNIFIED_PROTOCOL.md  AGENTIC_EVAS_ABLATION_PLAN.md  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
analysis/: B1_behavior_residual_analysis_20260509.json  B1_behavior_residual_analysis_20260509.md  affected_tasks_cross_20260508.json  affected_tasks_evas_diagnostics_20260509.txt  affected_tasks_event_parity_packs_20260509.json  affected_tasks_event_parity_packs_20260509.txt  affected_tasks_fileio_20260508.txt  affected_tasks_fileio_with_uncertainty_20260509.json  bpack-v1_semantic_contract_audit_20260508.json  bpack48_benchmark_readiness_audit_20260508.json  bpack48_mimo_compile_ce_v2_smoke_mt8192_20260508.groups.csv  bpack48_mimo_compile_ce_v2_smoke_mt8192_20260508.json  bpack48_mimo_compile_ce_v2_smoke_mt8192_20260508.md  bpack48_mimo_compile_ce_v2_smoke_mt8192_20260508.rows.csv  bpack48_mimo_compile_loop_mt8192_20260508.groups.csv  bpack48_mimo_compile_loop_mt8192_20260508.json  bpack48_mimo_compile_loop_mt8192_20260508.md  bpack48_mimo_compile_loop_mt8192_20260508.rows.csv  bpack48_mimo_compile_pse_ce_smoke_mt8192_20260508.groups.csv  bpack48_mimo_compile_pse_ce_smoke_mt8192_20260508.json  bpack48_mimo_compile_pse_ce_smoke_mt8192_20260508.md  bpack48_mimo_compile_pse_ce_smoke_mt8192_20260508.rows.csv  bpack48_mimo_compile_skill_accept_basic_mt8192_20260508.groups.csv  bpack48_mimo_compile_skill_accept_basic_mt8192_20260508.json  bpack48_mimo_compile_skill_accept_basic_mt8192_20260508.md  bpack48_mimo_compile_skill_accept_mt8192_20260508.json  (+153 more)
(+75851 files in other folders)
