[project]
name = "behavioral-veriloga-eval"
version = "0.2.1"
description = "Benchmark design package for evaluating pure voltage-domain Verilog-A modules."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "evas-sim",
  "matplotlib",
  "numpy",
  "pandas",
]

[dependency-groups]
dev = [
  "jsonschema",
  "pytest",
]

[tool.uv]
package = false
