[project]
name = "behavioral-veriloga-eval"
version = "0.2.2"
description = "Benchmark design package for evaluating pure voltage-domain Verilog-A modules."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "evas-sim",
  "matplotlib",
  "numpy",
  "pandas",
]

[dependency-groups]
dev = [
  "jsonschema",
  "pytest",
]

[project.optional-dependencies]
agentic = [
  "mini-swe-agent==2.4.5",
]

[tool.uv]
package = false
